--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@knaadh/nestjs-drizzle-mysql2": "^1.2.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "dotenv": "^16.4.7",
