--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "mysql2": "^3.14.0",
+    "nanoid": "^5.1.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
