--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-#PRD
-#DATABASE_URL=
-#DEV
-#DATABASE_URL=mysql://root:root@localhost:3306/url-shortner-db
+DATABASE_URL=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PORT=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+JWT_SECRET=
