--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-DATABASE_URL=
-DATABASE_HOST=
-DATABASE_USER=
-DATABASE_PORT=
-DATABASE_PASSWORD=
-DATABASE_NAME=
-JWT_SECRET=
+DATABASE_URL=mysql://root:secret@localhost:3306/url-shortner-db
+DATABASE_HOST=localhost
+DATABASE_USER=root
+DATABASE_PORT=3306
+DATABASE_PASSWORD=secret
+DATABASE_NAME=url-shortner-db
+JWT_SECRET=170135
