docs: .env & readme;

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+#por ser local vou deixar exposto
 DATABASE_URL=mysql://root:secret@localhost:3306/url-shortner-db
 DATABASE_HOST=localhost
 DATABASE_USER=root
